--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 customtkinter~=5.2.0
 Pillow~=10.0.0
 mss~=9.0.1
-pywin32~=306
+pywin32
 opencv-python~=4.8.0.76
 pytesseract~=0.3.10
+pywinauto~=0.6.8
